# ai-assistant

./: .code-workspace.code-workspace  .gitignore  README.md  a.py  b.py  config.yml  endpoints.yml  instruct.txt  requirements.txt
actions/: __init__.py  actions.md  b_career_advisor.py  give_career_advice.py  give_career_advice_b.py  logger_utils.py  sch_advisor_contact.py  sch_check_rag_success.py  suggestions.py
actions/career/: ai_adviser.py  career_advice.py  gemini_advice.py  get_user_query.py  give_career_advice_b.py  prompt.md
actions/general/: human_handoff.py  logger_utils.py  slots_validation.py
actions/school_support/: sch_check_rag_success.py
chat_ui/: custom_logger.py  my_app.py  my_app_2.py
coverage_reports/: coverage_report_for_failed_tests.csv  coverage_report_for_passed_tests.csv  failed.yml
data/: a_school_support.yml  b_career_guide.yml  c_fallback.yml  data.md  welcome.yml
docs/: canvas-help.txt  check_in-help.txt  comp-sci-course-details.txt  corporate-info.txt  current-students-course-guides.txt  docs.md  get-set+your-course.txt  it-account-passwords.txt  it-essentials.txt  ms-365-access.txt  printing-and-scanning.txt  rules_nd_reg.txt  self-help-software.txt
domain/: a_school_support.yml  domain.md  welcome.yml
mcp-server/: README.md  api.py  main.py  main_1.backup  main_1.py  pyproject.toml  test_the_api.py
prompts/: command-generator.jinja2  rephraser.backup  rephraser.jinja2
tests/: career_guide.yml  e2e_test_cases.backup  e2e_test_cases.yml  school_support.yml  test_cases.yml
za others/: test.-runs.ipynb
(+70 files in other folders)
